// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    color="green"
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        Object {
          "color": "green",
        },
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {currency} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": undefined,
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 16,
            "textAlignVertical": "center",
          },
          undefined,
          false,
          Object {
            "color": "#a3a3a3",
          },
          Object {
            "paddingLeft": 4,
          },
        ]
      }
    >
      $
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="numeric"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        Object {
          "textAlign": "right",
        },
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={false}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Text />
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    hint="Hello World"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {icon} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
      }
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboard="numeric"
    keyboardType="numeric"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    label="Hello World"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={true}
    numberOfLines={5}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {required} & {requiredIcon} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Text />
</View>
`;

exports[`<Input> when {required} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {valid} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value="soyjavi"
  />
  <Text />
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "paddingRight": 4,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "textAlignVertical": "center",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value="soyjavi"
  />
</View>
`;
